--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "nexmo": "^2.9.1",
