--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon server",
+    "start": "node server"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
